fix(spacing): fix the content width spacing in navbar and router-outlet

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,3 @@
 .router-outlet--wrapper {
-  margin: 2rem;
+  margin: 2rem 20%;
 }
