--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -1,5 +1,6 @@
 .nav-bar-wrapper {
   border-bottom: 1px solid #e5e5e5;
+  padding: 0 10%;
 }
 
 .nav-bar {
